[gd_scene load_steps=10 format=2]

[ext_resource path="res://data/theme/default_ui_text.tres" type="Theme" id=1]
[ext_resource path="res://scripts/GUI/TransferInventoryV2.gd" type="Script" id=2]
[ext_resource path="res://data/styles/GUI_bg.tres" type="StyleBox" id=3]
[ext_resource path="res://scripts/GUI/InputConsumer.gd" type="Script" id=4]
[ext_resource path="res://scenes/GUI/DialogWindowBaseASCII.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI/ItemList/MyItemList.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/ItemList/InventoryRowV2.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/InventoryV2_btn_group.tres" type="ButtonGroup" id=8]
[ext_resource path="res://scenes/GUI/ButtonBase.tscn" type="PackedScene" id=9]

[node name="TransferInventoryV2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 37.0
margin_right = -20.0
margin_bottom = -27.0

[node name="MyShip" parent="HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 626.0
margin_bottom = 1016.0
size_flags_horizontal = 3
size_flags_vertical = 3
title = "Player's Ship"

[node name="MyItemList" parent="HBoxContainer/MyShip" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 58.0
margin_right = -21.0
margin_bottom = -17.0
Row = ExtResource( 7 )
DragDropID = "InventoryV2"
SelectGroup = ExtResource( 8 )
CanDropOnSelf = true

[node name="CargoLabel" type="RichTextLabel" parent="HBoxContainer/MyShip"]
anchor_right = 1.0
margin_top = 14.0
margin_right = -30.0
margin_bottom = 46.0
bbcode_enabled = true
bbcode_text = "[right](127/212)[/right]"
text = "(127/212)"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 630.0
margin_right = 1257.0
margin_bottom = 1016.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Normal" type="Control" parent="HBoxContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -295.0
margin_right = 152.5
margin_bottom = 249.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transfer" parent="HBoxContainer/Control/Normal" instance=ExtResource( 9 )]
anchor_right = 1.0
margin_right = 0.0
margin_bottom = 90.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "[t]ransfer"
ShortcutKey = "t"

[node name="TakeAll" parent="HBoxContainer/Control/Normal" instance=ExtResource( 9 )]
anchor_right = 1.0
margin_top = 110.0
margin_right = 0.0
margin_bottom = 200.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "<<"
ShortcutKey = "<"

[node name="TransferAll" parent="HBoxContainer/Control/Normal" instance=ExtResource( 9 )]
anchor_right = 1.0
margin_top = 220.0
margin_right = 0.0
margin_bottom = 310.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = ">>"
ShortcutKey = ">"

[node name="Desc" parent="HBoxContainer/Control/Normal" instance=ExtResource( 9 )]
anchor_right = 1.0
margin_top = 330.0
margin_right = 0.0
margin_bottom = 420.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "?"
ShortcutKey = "?"
AlwaysOnShortcut = false

[node name="Close" parent="HBoxContainer/Control/Normal" instance=ExtResource( 9 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 90.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "[esc]close"
ShortcutEnum = 16777217
AlwaysOnShortcut = false

[node name="Control" type="Control" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_right = -22.0
margin_bottom = -134.0
mouse_filter = 2

[node name="Cancel" parent="HBoxContainer/Control/Control" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -1.0
margin_right = 152.0
margin_bottom = 89.0002
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "[esc] cancel"
ShortcutEnum = 16777217
AlwaysOnShortcut = false

[node name="OtherShip" parent="HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1261.0
margin_right = 1888.0
margin_bottom = 1016.0
size_flags_horizontal = 3
size_flags_vertical = 3
title = "A Human Scout"

[node name="MyItemList" parent="HBoxContainer/OtherShip" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 58.0
margin_right = -21.0
margin_bottom = -17.0
Row = ExtResource( 7 )
DragDropID = "InventoryV2"
SelectGroup = ExtResource( 8 )
CanDropOnSelf = true

[node name="CargoLabel" type="RichTextLabel" parent="HBoxContainer/OtherShip"]
anchor_right = 1.0
margin_top = 14.0
margin_right = -30.0
margin_bottom = 46.0
bbcode_enabled = true
bbcode_text = "[right](127/212)[/right]"
text = "(127/212)"
